# minimax_speech

./: README.md  pyproject.toml  run_voice_manager.bat  set_env.ps1
docs/: usage.md
examples/: async_usage.py  basic_usage.py  file_upload_usage.py  voice_clone_usage.py  voice_list_usage.py
src/minimax_speech/: __init__.py  async_client.py  cli.py  client.py  common_models.py  config.py  exceptions.py  file_upload_models.py  tts_models.py  voice_clone_models.py  voice_query_models.py
tests/: test_models.py  test_voice_clone.py  test_voice_list.py
tools/: README.md  app.py  batch_config_template.csv  config.json  pcm_to_wav.py  run_uv.py  utils.py  voice_manager.py
tools/components/: __init__.py  audio_parameters.py  clone_voices_manager.py  excel_manager.py  sidebar.py  system_voices_manager.py  voice_manager.py
tools/pages/: __init__.py  add_voice.py  batch_upload.py  test_voice.py  voice_list.py
